src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>ActivityRefAccountLink__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp; $Setup.CommDefine__c.ActivityRefAccountReportId__c &amp; &quot;?pn0=sw&amp;pv0=&quot; &amp; Id,   TEXT(RelAccountCnt__c)  )</formula>
        <label>関連取込先</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreateType__c</fullName>
        <label>作成タイプ</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CssStyle__c</fullName>
        <label>カスタム様式</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomEventFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>マルチタスク、プロジェクト管理からデータ更新されるがどうか識別用フラグ</inlineHelpText>
        <label>変更元識別フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EndDatetime__c</fullName>
        <description>プロジェクト管理用項目</description>
        <label>終了日時</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EventIndex__c</fullName>
        <externalId>true</externalId>
        <label>行動インデクス</label>
        <length>33</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GroupCode__c</fullName>
        <label>グループコード</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsCantUpdFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <label>変更不可フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeadRef__c</fullName>
        <inlineHelpText>お部屋項目を設定される場合、ご予約情報を自動作成し、作成した予約IDを該当項目に格納する</inlineHelpText>
        <label>自動作成の予約ID(システム用)</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LockFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>画面レイアウトから直接編集不可</inlineHelpText>
        <label>自動作成フラグ(システム用)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MutliUserDetail__c</fullName>
        <externalId>true</externalId>
        <label>複数担当作成(システム用)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>プロジェクト化</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RelAccountCnt__c</fullName>
        <label>関連取引先数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RoomRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>該当項目が「ON」の場合、行動情報により、ご予約情報を自動作成する</inlineHelpText>
        <label>お部屋</label>
        <referenceTo>Room__c</referenceTo>
        <relationshipLabel>活動</relationshipLabel>
        <relationshipName>refRoom</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TaskStartTime__c</fullName>
        <inlineHelpText>TODO情報はプロジェクト管理から開始時刻を設定される場合、該当時刻情報を格納する</inlineHelpText>
        <label>Todo開始時刻</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllActivities</fullName>
        <filterScope>Team</filterScope>
        <label>All Activities</label>
    </listViews>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>